   -  subtraction of 2 labels may have caused error "constant value too large";
      see minus1.asm.
   -  if .model wasn't flat, but segments with flat attribute existed, they
      may not have been listed in symbol table.
   -  regression in v2.05-v2.18, DUP operator: if an undefined symbol was
      contained in first operand, error message may have been omitted; see
      struct43.asm.

   Other changes:
   -  write listing reworked.
   -  option -pe: add segments with combine type stack - they may contain
      initialized data.
   -  JWasmr.exe: option -Sz removed.
   -  PUSHW will emit warning "magnitude of offset exceeds 16-bit" if
      operand is a 32-bit offset.
   -  using 'option oldmacros' will cause a warning only.
   -  option -pe: info section ".drectve" will be scanned and some linker
      options are recognized and handled.
   -  PUBLIC directive extended to allow setting the export attribute.
   -  PAGE directive: syntax check added.
   -  .model flat: ensure variables in 16-bit segments can be accessed
      directly if segment register is assumed flat ( Masm compatible );
      see flat2.asm.
   

   09.06.2024, v2.18:

   Bugfixes:
   -  omffixup.c, debug version only: a superfluous %s in a debug display
      may have caused an exception for output format omf.
   -  invoke directive: vararg parameter now rejected if used as argument;
      see vararg1.asm.
   -  don't add "assume cs:dgroup" in tiny model if format is coff/elf or
      model is flat; see tiny3.asm.
   -  default fastcall for 32-bit (MS style) caused a GPF for non-proc
      symbols; see fastcms.asm.
   -  listing: when segment directive created a list entry, the offset size
      may have been wrong.
   -  omf format: externdef may have caused a PUBDEF record to be written
      in pass 2, resulting in an invalid object module.
   -  invoke directive: if cpu was 8086, and the argument was a constant 0,
      a wrong value may have been pushed; see invoke56.asm.